fix a small bug with tmux initializing

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 #Basic Settings
 set -g default-terminal "screen-256color"
 set -g mouse off
-set -s escape-time 0
+set -s escape-time 50 # setting to 0 causes tmux to append 0;10;1c to the initial prompt, no idea why!
 set -g repeat-time 0
 
 #StatusBar Config
