fix colorscheme not setting in tmux
add tmux reload config keymap

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 #Basic Settings
-set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
+set-option -g default-terminal "xterm-256color"
 set -g mouse off
 set -s escape-time 50 # setting to 0 causes tmux to append 0;10;1c to the initial prompt, no idea why!
 set -g repeat-time 0
@@ -43,7 +44,7 @@ bind - split-window -v
 
 #Keymap for Reloading Tmux Config
 unbind r
-bind r source-file ~/.config/tmux/.tmux.conf \; display-message "Config Successfully Reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config Successfully Reloaded!"
 
 #Toggle Maximize Pane
 bind -r m resize-pane -Z
