--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -54,6 +54,7 @@ bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
 bind -r C-h resize-pane -L
 bind -r C-l resize-pane -R
+bind -r ^ last-window
 bind -r k select-pane -U 
 bind -r j select-pane -D 
 bind -r h select-pane -L 
@@ -66,6 +67,12 @@ unbind C-Up
 unbind C-Down 
 unbind C-Left 
 unbind C-Right
+
+#Keymaps for tmux-sessionizer
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+bind-key -r P run-shell "~/.local/scripts/tmux-sessionizer ~/projects/"
+bind-key -r L run-shell "~/.local/scripts/tmux-sessionizer ~/learning/"
+bind-key -r N run-shell "~/.local/scripts/tmux-sessionizer ~/notes/"
 
 #Plugin Manager And Plugins
 set -g @plugin 'tmux-plugins/tpm'
