--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,7 +2,7 @@
 set -ga terminal-overrides ",xterm-256color*:Tc"
 set-option -g default-terminal "xterm-256color"
 set -g mouse off
-set -s escape-time 50 # setting to 0 causes tmux to append 0;10;1c to the initial prompt, no idea why!
+set -s escape-time 0 
 set -g repeat-time 0
 
 #StatusBar Config
