chore: update tmux keymaps

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -50,10 +50,10 @@ bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config Successfu
 bind -r m resize-pane -Z
 
 #Enabeling Vim Type Keymapping
-bind -r C-k resize-pane -U
-bind -r C-j resize-pane -D
-bind -r C-h resize-pane -L
-bind -r C-l resize-pane -R
+bind -r C-Up resize-pane -U
+bind -r C-Down resize-pane -D
+bind -r C-Left resize-pane -L
+bind -r C-Right resize-pane -R
 bind -r ^ last-window
 bind -r k select-pane -U 
 bind -r j select-pane -D 
@@ -63,10 +63,10 @@ unbind Up
 unbind Down   
 unbind Left   
 unbind Right  
-unbind C-Up   
-unbind C-Down 
-unbind C-Left 
-unbind C-Right
+# unbind C-Up   
+# unbind C-Down 
+# unbind C-Left 
+# unbind C-Right
 
 #Keymaps for tmux-sessionizer
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
