--- a/alacritty/alacritty/alacritty.toml
+++ b/alacritty/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = [ "~/.config/alacritty/theme.yml", "~/.config/alacritty/font.toml" ]
+import = [ "~/.config/alacritty/theme.toml", "~/.config/alacritty/font.toml" ]
 
 [font]
 size = 11
