--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -718,7 +718,7 @@ cursor #9c61ab
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no 
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
