fix error in config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1317,7 +1317,7 @@ shell zellij
 #: interactive mode and reads its startup rc files. Environment
 #: variables are expanded in this setting.
 
-. editor nvim
+# editor nvim
 
 #: The terminal based text editor (such as vim or nano) to use when
 #: editing the kitty config file or similar tasks.
