--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      CaskaydiaMono Nerd Font 
+font_family      CaskaydiaMono NF  
 # bold_font        CaskaydiaMono Nerd Font
 # italic_font      CaskaydiaMono Nerd Font
 # bold_italic_font CaskaydiaMono Nerd Font
@@ -58,7 +58,7 @@ font_size 11.0
 
 #:     narrow_symbols codepoints [optionally the number of cells]
 
-disable_ligatures never
+# disable_ligatures never
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them. You can tell kitty to not render
