--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,11 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      CaskaydiaMono NF  
+font_family      CaskaydiaCove Nerd Font  
 # bold_font        CaskaydiaMono Nerd Font
 # italic_font      CaskaydiaMono Nerd Font
 # bold_italic_font CaskaydiaMono Nerd Font
+# ligature test => >- ->
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
