add kitty conf, update nvim

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      CaskaydiaCove Nerd Font  
+font_family      FiraCode Nerd Font  
 # bold_font        CaskaydiaMono Nerd Font
 # italic_font      CaskaydiaMono Nerd Font
 # bold_italic_font CaskaydiaMono Nerd Font
