add some :chefskiss:

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1143,7 +1143,7 @@ foreground #ccccce
 
 #: The foreground and background colors.
 
-background_opacity 0.97 
+background_opacity 0.9 
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1309,7 +1309,7 @@ color15 #ebdbb2
 
 #: Advanced {{{
 
-shell zellij
+#shell zellij
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
