--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=waybar & swaync & hyprpaper & hypridle
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1.6
+monitor=,preferred,auto,1.2
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -61,15 +61,15 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     
-    border_size = 3
+    border_size = 1
 
     col.active_border = $mauve $flamingo 90deg
     col.inactive_border = $subtext0
 
     resize_on_border = true
 
-    gaps_in = 4
-    gaps_out = 8
+    gaps_in = 2
+    gaps_out = 2
 
     layout = dwindle
 
@@ -95,7 +95,7 @@ decoration {
 }
 
 animations {
-    enabled = true
+    enabled = false
 
     bezier = linear, 0.0, 0.0, 1, 1
     animation = borderangle, 1, 50, linear, loop
