--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -39,6 +39,8 @@ xwayland {
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+# after logging in with Gnome, it sets XDG_CURRENT_DESKTOP to GNOME. Set it back
+env = XDG_CURRENT_DESKTOP,Hyprland
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
