fix for lockscreen blur moving wallpaper

--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -14,8 +14,8 @@ general {
 background {
     monitor =
     path = ~/.config/backgrounds/shaded.png
-    blur_passes = 2
     color = $base
+    halign = right
 }
 
 # TIME
