add avatar to hyprlock screen

--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -46,8 +46,8 @@ label {
 
 image {
     monitor = 
-    path = ~/.face
-    size = 100
+    path = ~/.config/hypr/avatar.png
+    # size = 100
     border_color = $accent
 
     position = 0, 75
